--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,34 @@
 /* Styling */
 body {
-    background: blue;
+    background: red;
+}
+
+#stage{
+    position: relative;
+    overflow:hidden;
+}
+
+#stage svg{
+    position: absolute;
+    
+}
+
+
+h1{
+    position: absolute;
+}
+
+
+
+//animations
+
+//first frame
+#stage h1,#stage svg{
+    opacity:0;
+}
+
+//last frame
+#stage:hover h1,
+#stage:hover svg{
+    opacity:1;
 }
