--- a/css/google-homepage.css
+++ b/css/google-homepage.css
@@ -66,7 +66,7 @@ body{
     position: relative;
     overflow: hidden;
     
-  
+    -webkit-clip-path: circle(28.9% at 50% 50%);
     clip-path: circle(28.9% at 50% 50%);
     
 }
